@@ -209,11 +209,11 @@ typedef enum {
 #define VT100CHARATTR_BG_HI_WHITE     (VT100CHARATTR_BG_HI_BASE + COLORCODE_WHITE)
 
 
-#define DEFAULT_FG_COLOR_CODE	16
-#define DEFAULT_BG_COLOR_CODE	17
-#define BOLD_MASK 32
-#define UNDER_MASK 64
-#define BLINK_MASK 128
+#define DEFAULT_FG_COLOR_CODE	0x10
+#define DEFAULT_BG_COLOR_CODE	0x11
+#define BOLD_MASK 0x20
+#define BLINK_MASK 0x40
+#define UNDER_MASK 0x80
 
 @interface VT100Terminal : NSObject
 {
